syntax = "proto3";

package proto;

option go_package = "./proto/;protopb";

message Submission {
    string date = 1;
    string language = 2;
    string problemStatus = 3;
    string problemTitle = 4;
    string problemLink = 5;
    string codeLink = 6;
}
message Contest {
    string contestName = 1;
    double rank = 2;
    double rating = 3;
    int32 problemSolved = 4;
}

message Response {
  repeated Submission submissions = 1;
  repeated Contest contests = 2;
}

message Request {
  string userHandle = 1;
}

message OperationStatus {
  bool status = 1;
  string userHandle = 2;
}

service LeetcodeMicroservice {
  rpc getUserSubmissions(Request) returns (Response){};
  rpc getAllUserSubmissions(stream Request) returns (stream OperationStatus){};
}

